added basic template for html as well as some styling for the body, header and footer

--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
+<html lang = "en-GB">
+	<head>
+		<title>Homepage</title>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="/css/style.css">	
+	</head>
+	
+		<body>
+	
+	<a href="#maincontent">Skip to main content</a>
+	<a href="#skiptofooter" id="skiptofooter">Skip to footer</a>
+	
+	
+	<h1> Homepage</h1>	
+	<a id="skiptohome"></a>
+	
 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+	
+	<header>
+		
+	
+	</header>
 
-   
-</body>
+
+	<a id="skiptofooter"></a>
+	<footer>
+		<p> All copyright is held by there respective owners</p>
+		<p> For any querys regarding the avabillity of stock please contact us via our contact page</p>
+		<a href="#skiptohome">Skip to home</a>
+		<a href="#maincontent">Skip to main content</a>
+	</footer>	
+	</body>
+
 </html>
+		
