--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
 		<title>Homepage</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="/css/style.css">	
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	
 		<body>
@@ -18,8 +19,17 @@
 
 	
 	<header>
-		
 	
+
+    <div class="topnav" id="myTopnav">
+        <a href="index.html">Homepage</a>
+        <a href="about_us.html">About us </a>
+        <a href="Contact_us.html">Contact us </a>
+        <a href="FAQ.html">FAQ </a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i></a>
+    </div>    
+    <script type="text/javascript" src="/js/navFunction.js"></script>
 	</header>
 
 
