added Catalolg page with new script

--- a/html/Catalog.html
+++ b/html/Catalog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en-GB">
 	<head>
-		<title>Homepage</title>
+		<title>Catalog</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="/css/style.css">	
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,15 +11,12 @@
 	
 	<a href="#maincontent">Skip to main content</a>
 	<a href="#skiptofooter" id="skiptofooter">Skip to footer</a>
-	
-	
-    <h1>Libernal libarators</h1>
 	<a id="skiptohome"></a>
-	
 
-	
+    <h1>Libernal libarators</h1>
+
+
 	<header>
-	
 
     <div class="topnav" id="myTopnav">
         <a href="index.html">Homepage</a>
@@ -33,9 +30,8 @@
     <script type="text/javascript" src="/js/navFunction.js"></script>
 	</header>
 
-    <h2>Welcome</h2>
+    <script src="./js/Books.js"></script>
 
-    <p> We are happy you have chosen us for your lituature needs to start either navigate via the navigation bar above or or use the following shortcut <a href="Catalog.html">here </a> to start finding your next  </p>
 
 	<a id="skiptofooter"></a>
 	<footer>
