fixed media querys not working on moblie.

--- a/html/Catalog.html
+++ b/html/Catalog.html
@@ -1,8 +1,10 @@
+  
 <!DOCTYPE html>
 <html lang = "en-GB">
 	<head>
 		<title>Catalog</title>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" href="/css/style.css">	
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
@@ -13,7 +15,7 @@
 	<a href="#skiptofooter" id="skiptofooter">Skip to footer</a>
 	<a id="skiptohome"></a>
 
-    <h1>Libernal libarators</h1>
+    <a  href="index.html"><img id="logo" src="/res/Libernal libarators LogoS.png" alt="Homepage logo"></a>
 
 
 	<header>
@@ -30,7 +32,7 @@
     <script type="text/javascript" src="/js/navFunction.js"></script>
 	</header>
 
-    <script src="./js/Books.js"></script>
+    <script src="/js/Books.js"></script>
 
 
 	<a id="skiptofooter"></a>
@@ -43,4 +45,3 @@
 	</body>
 
 </html>
-		
