--- a/html/index.html
+++ b/html/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
-<html lang = "en-GB">
-	<head>
-		<title>Homepage</title>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="/css/style.css">	
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
-	
-		<body>
-	
-	<a href="#maincontent">Skip to main content</a>
-	<a href="#skiptofooter" id="skiptofooter">Skip to footer</a>
-	
-	
-    <h1>Libernal libarators</h1>
+<html lang="en-GB">
+
+<head>
+	<title>Homepage</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
 	<a id="skiptohome"></a>
-	
 
-	
 	<header>
-	
 
-    <div class="topnav" id="myTopnav">
-        <a href="index.html">Homepage</a>
-        <a href="Catalog.html">Catalog</a>
-        <a href="about_us.html">About us </a>
-        <a href="Contact_us.html">Contact us </a>
-        <a href="FAQ.html">FAQ </a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i></a>
-    </div>    
-    <script type="text/javascript" src="/js/navFunction.js"></script>
+		<a href="#maincontent">Skip to main content</a>
+		<a href="#skiptofooter">Skip to footer</a>
+
+		
+		<a  href="index.html"><img id="logo" src="/res/Libernal libarators LogoS.png" alt="Homepage logo"></a>
+
+		<div class="topnav" id="myTopnav">
+			<a href="index.html">Homepage</a>
+			<a href="Catalog.html">Catalog</a>
+			<a href="about_us.html">About us </a>
+			<a href="Contact_us.html">Contact us </a>
+			<a href="FAQ.html">FAQ </a>
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+				<i class="fa fa-bars"></i></a>
+		</div>
+
 	</header>
 
-    <h2>Welcome</h2>
+	<div class="container">
+		<img src="/res/2_LIB_Gladstones_Library_JPEG_2500.jpg" alt="Image of libray" style="width:100%;">
+		<div class="welcomeText">
+			<h4>Welcome</h4>
+			<p>Welcome to Libernal libarators please feel free to navigate though the site via the navigation bar or use
+				this shortcut <a href="Catalog.html">here</a> get find your next read. </p>
+		</div>
+	</div>
 
-    <p> We are happy you have chosen us for your lituature needs to start either navigate via the navigation bar above or or use the following shortcut <a href="Catalog.html">here </a> to start finding your next  </p>
+
+
+
+
+
+
+	<script type="text/javascript" src="/js/navFunction.js"></script>
+
+
 
 	<a id="skiptofooter"></a>
 	<footer>
@@ -43,8 +57,7 @@
 		<p> For any querys regarding the avabillity of stock please contact us via our contact page</p>
 		<a href="#skiptohome">Skip to home</a>
 		<a href="#maincontent">Skip to main content</a>
-	</footer>	
-	</body>
+	</footer>
+</body>
 
 </html>
-		
