added new ajex queris to insert into table

--- a/html/Catalog.html
+++ b/html/Catalog.html
@@ -34,6 +34,18 @@
 
     <script src="/js/Books.js"></script>
 
+	<table id= "stock">
+		<tr>
+		<th>Title</th>
+		<th>Book Edition</th>
+		<th>Year published</th>
+	</tr>
+		<tr>
+		<td id="Title"></td>
+		<td id="bookEdition"></td>
+		</tr>
+	</table>
+
 
 	<a id="skiptofooter"></a>
 	<footer>
