--- a/html/index.html
+++ b/html/index.html
@@ -18,12 +18,12 @@
 		<a href="#skiptofooter">Skip to footer</a>
 
 		
-		<a  href="index.html"><img id="logo" src="/res/Libernal libarators LogoS.png" alt="Homepage logo"></a>
+		<a  href="index.html"><img id="logo" src="/res/LibernalLibaratorsLogoS.png" alt="Homepage logo"></a>
 
 		<div class="topnav" id="myTopnav">
 			<a href="index.html">Homepage</a>
 			<a href="Catalog.html">Catalog</a>
-			<a href="about_us.html">About us </a>
+			<a href="aboutUs.html">About us </a>
 			<a href="Contact_us.html">Contact us </a>
 			<a href="FAQ.html">FAQ </a>
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -41,11 +41,7 @@
 		</div>
 	</div>
 
-
-
-
-
-
+	
 
 	<script type="text/javascript" src="/js/navFunction.js"></script>
 
