fixed json js where names would show as [object]

--- a/html/Catalog.html
+++ b/html/Catalog.html
@@ -37,7 +37,7 @@
 
 	<input type="text" id="search" onkeyup="search()" placeholder="Search for Titles">
 
-
+	<div style="overflow-x:auto;">
 	<table id="stock">
 		<tr>
 			<th>Title</th>
@@ -54,7 +54,7 @@
 			<td id="favorite"></td>
 		</tr>
 	</table>
-
+	</div>
 
 	<a id="skiptofooter"></a>
 	<footer>
