--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,7 @@
 		<img src="/res/2_LIB_Gladstones_Library_JPEG_2500.jpg" alt="Image of libray" style="width:100%;">
 		<div class="welcomeText">
 			<h4>Welcome</h4>
+			<a id="maincontent"></a>
 			<p>Welcome to Libernal libarators please feel free to navigate though the site via the navigation bar or use
 				this shortcut <a href="Catalog.html">here</a> get find your next read. </p>
 		</div>
