--- a/html/Catalog.html
+++ b/html/Catalog.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+	<a id="skiptohome"></a>
 	<a href="#maincontent">Skip to main content</a>
 	<a href="#subjectsSkip">Skip to Subjects</a>
 	<a href="#SearchBarSkip">Skip to Search</a>
@@ -47,12 +47,12 @@
 	If you would like to refresh the table use the refresh button next to the filter search bar.</p>
 
 	<h2>Subjects</h2>
-
+	<a id="subjectsSkip"></a>
 	<label for="newAjexSearch" id="altText">Search for titles</label>
 	<input type="text" id="newAjexSearch" placeholder="Search for Titles"><br><br>
 	<input type="submit" id="newAjexSearchSubmit" value="Submit">
 
-	<a id="skiptohome"></a>
+	
 	<div id="fictionElement" class="container">
 		<img id="fictionImg" src="/res/2_LIB_Gladstones_Library_JPEG_2500.jpg" alt="Fiction subject image">
 		<div class="welcomeText">
