--- a/html/index.html
+++ b/html/index.html
@@ -2,35 +2,38 @@
 <html lang="en-GB">
 
 <head>
-	<title>Homepage</title>
+	<title>Libernal libarators homepage</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<script src="/js/navFunction.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="/js/FilterTableJ.js"></script>
 </head>
 
 <body>
 	<a id="skiptohome"></a>
+	<a href="#maincontent">Skip to main content</a>
+	<a href="#skiptofooter">Skip to footer</a>
+	<a id="skiptohome"></a>
+
+	<a href="index.html"><img id="logo" src="/res/LibernalLibaratorsLogoS.png" alt="Homepage logo"></a>
+
 
 	<header>
-
-		<a href="#maincontent">Skip to main content</a>
-		<a href="#skiptofooter">Skip to footer</a>
-
-		
-		<a  href="index.html"><img id="logo" src="/res/LibernalLibaratorsLogoS.png" alt="Homepage logo"></a>
 
 		<div class="topnav" id="myTopnav">
 			<a href="index.html">Homepage</a>
 			<a href="Catalog.html">Catalog</a>
-			<a href="aboutUs.html">About us </a>
-			<a href="Contact_us.html">Contact us </a>
-			<a href="FAQ.html">FAQ </a>
+			<a href="favorates.html">Favorites</a>
 			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 				<i class="fa fa-bars"></i></a>
 		</div>
 
 	</header>
+	<h1>Homepage</h1>
 
 	<div class="container">
 		<img src="/res/2_LIB_Gladstones_Library_JPEG_2500.jpg" alt="Image of libray" style="width:100%;">
@@ -42,19 +45,83 @@
 		</div>
 	</div>
 
-	
+
 
 	<script src="/js/navFunction.js"></script>
 
+	<h1>About us</h1>
 
+	<img src="/res/old-books-arranged-on-shelf-royalty-free-image-1572384534.jpg" width="200" height="200"
+		alt="About us image with workers in backgroud" class="aboutusimage" id="aboutusimage1">
 
-	<a id="skiptofooter"></a>
-	<footer>
-		<p> All copyright is held by there respective owners</p>
-		<p> For any querys regarding the avabillity of stock please contact us via our contact page</p>
-		<a href="#skiptohome">Skip to home</a>
-		<a href="#maincontent">Skip to main content</a>
-	</footer>
+	<p class="aboutUsText"> Welcome to Libernal libarators, we are the one stop in all your reading needs. Select from
+		hundrads of books in our deep libary of books. not sure what to look for check out our subjects section within
+		our <a href="Catalog.html">catalog</a>
+		to get a taste of the books we offer in our collection. We have been providing books to our customers since 2021
+		and are proud with our huge collection, not
+		happy with your results please feel free to contact us via the details below and we will try to responde and
+		cater to your needs as best as possiable </p>
+
+	<img src="/res/startup-g441f2006a_1920.jpg" width="500" height="500" alt="About us image with workers in backgroud"
+		class="aboutusimage" id="aboutusimage2">
+
+	<h2>Frequently asked questions</h2>
+
+	<h3>what subjects do you stock?</h3>
+	<ul>
+		<li>Fiction</li>
+		<li>Programming</li>
+		<li>horror</li>
+	</ul>
+
+	<h3>Where can we find your collection?</h3>
+
+	<p>simpley head to our <a href="Catalog.html">catalog</a> page</p>
+
+	<h3>Im not sure if you have a book a want how do I check?</h3>
+
+	<p>Either check our stock on the catalog page by search for the title you are looking for contact us for enquirers
+	</p>
+
+	<h3>How can I get in touch?</h3>
+
+	<p>You can contact us via..</p>
+
+	<ul>
+		<li>Our phone on 07945798239</li>
+		<li>Our email at LibernalLibarators@email.com</li>
+	</ul>
+
+	<h2>Contact us</h3>
+
+		<form>
+
+			<label for="fname">First Name</label>
+			<input type="text" id="fname" placeholder="Given name">
+			<br></br>
+			<label for="Surname">Last Name</label>
+			<input type="text" id="Surname" placeholder="Family name">
+			<br></br>
+			<label for="Reason for contact">Reason for contacting us</label>
+			<select id="Reason for contact" name="Reason for contact">
+				<option value="Question">Question</option>
+				<option value="Issue">Issue</option>
+				<option value="Thanks">Thanks</option>
+			</select>
+			<br></br>
+			<textarea id="subject" name="subject" placeholder="Please enter your question/issue here"></textarea>
+			<br></br>
+			<input type="submit" value="Submit">
+
+		</form>
+
+		<a id="skiptofooter"></a>
+		<footer>
+			<p> All copyright is held by there respective owners</p>
+			<p> For any querys regarding the avabillity of stock please contact us via our contact page</p>
+			<a href="#skiptohome">Skip to home</a>
+			<a href="#maincontent">Skip to main content</a>
+		</footer>
 </body>
 
 </html>
