fixed some valdation issues

--- a/html/Catalog.html
+++ b/html/Catalog.html
@@ -19,7 +19,6 @@
 	<a href="#subjectsSkip">Skip to Subjects</a>
 	<a href="#SearchBarSkip">Skip to Search</a>
 	<a href="#skiptofooter">Skip to footer</a>
-	<a id="skiptohome"></a>
 
 	<a href="index.html"><img id="logo" src="/res/LibernalLibaratorsLogoS.png" alt="Homepage logo"></a>
 
@@ -93,7 +92,7 @@
 			<th>Favorites</th>
 		</tr>
 		<tr>
-			<td id="Title"></td>
+			<td class="bookTitles" id="Title"></td>
 			<td id="bookEdition"></td>
 			<td id="coverId"></td>
 			<td id="author"></td>
