fixed table and some acessabilty errors

--- a/Catalog.html
+++ b/Catalog.html
@@ -25,8 +25,7 @@
 			<a href="index.html">Homepage</a>
 			<a href="Catalog.html">Catalog</a>
             <a href="favorates.html">Favorites</a>
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-				<i class="fa fa-bars"></i></a>
+			<a href="javascript:void(0);" class="icon" onclick="myFunction()">Menu <i class="fa fa-bars"></i></a>
 		</div>
 
 	</header>
@@ -70,6 +69,7 @@
 		<button type="button" id="refreshbutton"><img id="refresh" src="/res/32x32.png" alt="refresh button"></button>
 		<span class="tooltiptext"><a id = "tiptext">click to refresh table</a></span>
 	</div>
+	<label for= "search" id="tableLable">Filter table for titles</label>
 	<input type="text" id="search" placeholder="filter table for Titles">
 
 	
@@ -82,9 +82,9 @@
 			<th>Book Edition</th>
 			<th>Cover ID</th>
 			<th>Author</th>
-			<th>Availabililty</th>
-			<th>Readable</th>
 			<th>Cover</th>
+			<th>Readable</th>
+			<th>Availabililty</th>
 			<th>Favorites</th>
 		</tr>
 		<tr>
