--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
 			<a href="index.html">Homepage</a>
 			<a href="Catalog.html">Catalog</a>
 			<a href="favorates.html">Favorites</a>
-			<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-			<i class="fa fa-bars"></i></a>
+			<a href="javascript:void(0);" alt = "menu drop down" class="icon" onclick="myFunction()">Menu<i class="fa fa-bars"></i></a>
 		</div>
 
 	</header>
 	<h1>Homepage</h1>
 
 	<div class="container" role="region" aria-label="welcomeMessage" >
-		<img src="/res/2_LIB_Gladstones_Library_JPEG_2500.jpg" alt="Image of libray" style="width:100%;">
+		<input type = "image" src="/res/2_LIB_Gladstones_Library_JPEG_2500.jpg" alt="Image of libray">
 		<div class="welcomeText" >
 			<h2>Welcome</h2>
 			<a id="maincontent"></a>
@@ -38,8 +37,7 @@
 		</div>
 	</div>
 
-
-
+	
 	
 
 	<h2>About us</h2>
@@ -102,6 +100,7 @@
 				<option value="Thanks">Thanks</option>
 			</select>
 			<br>
+			<label for="subject">Subject</label>
 			<textarea id="subject" name="subject" placeholder="Please enter your question/issue here"></textarea>
 			<br>
 			<input type="submit" value="Submit">
